k8s/bootstrap/base/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peerauthentication-strict
spec:
  mtls:
    mode: STRICT
