k8s/bootstrap/base/istio/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "cognito-authentication-request"

spec:
  jwtRules:
    - issuer: "TBC"
      jwksUri: "TBC"
