k8s/bootstrap/base/istio/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: iris-transparent-proxy
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    - match:
        - uri:
            prefix: /api

      rewrite:
        uriRegexRewrite:
          match: ^/api/?(.*)$
          rewrite: /\1
      route:
        - destination:
            host: iris-write-api
            port:
              number: 3010
    - match:
        - uri:
            prefix: /transparent-proxy

      route:
        - destination:
            host: iris-transparent-proxy
            port:
              number: 80
    - match:
        - uri:
            exact: /
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Access-Control-Allow-Origin: "*"
      route:
        - destination:
            host: iris-visualiser
            port:
              number: 80

    # Rule for /configuration paths
    - match:
        - uri:
            prefix: /configuration
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
      route:
        - destination:
            host: iris-visualiser
            port:
              number: 80

    # Rule for all other requests
    - match:
        - uri:
            prefix: /
      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      headers:
        response:
          set:
            Access-Control-Allow-Origin: "*"
      route:
        - destination:
            host: iris-visualiser
            port:
              number: 80
